hphp/hack/test/typecheck/nullsafe/nullsafe-prop-5.php
<?hh

class C {
  public int $x = 123;
}

function test(?C $c): void {
  unset($c?->x);
}
